<?xml version="1.0"?>
<package>
  <name>sawyer_sim_examples</name>
  <version>5.3.0</version>
  <description>The sawyer_sim_examples package</description>

  <maintainer email="support@rethinkrobotics.com">
    Rethink Robotics Inc.
  </maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://sdk.rethinkrobotics.com/intera/</url>
  <url type="repository">
    https://github.com/RethinkRobotics/sawyer_simulator
  </url>
  <url type="bugtracker">
    https://github.com/RethinkRobotics/sawyer_simulator/issues
  </url>
  <author>Rethink Robotics Inc.</author>
  <author>Ian McMahon</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>intera_core_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>intera_core_msgs</run_depend>
  <run_depend>intera_interface</run_depend>
  <run_depend>sawyer_gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>

</package>
