cmake_minimum_required(VERSION 2.8.3)
project(sawyer_sim_hardware)

#find_package(catkin
#  REQUIRED COMPONENTS
#  intera_core_msgs
#)

#find_package(Eigen REQUIRED)
#catkin_package(
#  INCLUDE_DIRS include
#  CATKIN_DEPENDS
#    intera_core_msgs
#  DEPENDS
#  LIBRARIES ${PROJECT_NAME}
#)

#include_directories(include
#  ${catkin_INCLUDE_DIRS}
#  ${EIGEN_INCLUDE_DIRS}
#)

#add_executable(sawyer_emulator src/sawyer_emulator.cpp)
#target_link_libraries(sawyer_emulator ${catkin_LIBRARIES})
#add_dependencies(sawyer_emulator ${catkin_EXPORTED_TARGETS})

#install(
#  TARGETS sawyer_emulator
#  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
#)


#install(
#  DIRECTORY config images include launch
#  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
#)
